--- a/qt_designer/creatorconfig_dialog.ui
+++ b/qt_designer/creatorconfig_dialog.ui
@@ -25,28 +25,28 @@
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="QComboBox" name="cb_profile">
+       <widget class="QComboBox" name="cb_gen_method">
         <property name="currentIndex">
          <number>0</number>
         </property>
         <item>
          <property name="text">
-          <string>yield</string>
+          <string>Channeling yield</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>ideal</string>
+          <string>Ideal</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>poisson</string>
+          <string>Poisson noise</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>monte carlo</string>
+          <string>Monte Carlo</string>
          </property>
         </item>
        </widget>
@@ -72,7 +72,7 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLineEdit" name="lineEdit"/>
+       <widget class="QLineEdit" name="le_normalization"/>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_3">
