--- a/qt_designer/patterncreator_widget.ui
+++ b/qt_designer/patterncreator_widget.ui
@@ -507,7 +507,7 @@ p, li { white-space: pre-wrap; }
           </widget>
          </item>
          <item row="1" column="0" colspan="2">
-          <widget class="QPushButton" name="pg_generatepattern">
+          <widget class="QPushButton" name="pb_generatepattern">
            <property name="text">
             <string>Generate Pattern</string>
            </property>
