--- a/qt_designer/viewresults_widget.ui
+++ b/qt_designer/viewresults_widget.ui
@@ -40,6 +40,13 @@
    <item>
     <widget class="QTableView" name="ResultsTable"/>
    </item>
+   <item>
+    <widget class="QPushButton" name="pb_simplify">
+     <property name="text">
+      <string>Simplified Table View</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
