--- a/qt_designer/datapattern_widget.ui
+++ b/qt_designer/datapattern_widget.ui
@@ -170,7 +170,7 @@ p, li { white-space: pre-wrap; }
          <item row="3" column="1">
           <widget class="QPushButton" name="pb_removecentral">
            <property name="text">
-            <string>Mask tpx Central Pixels</string>
+            <string>Mask Quad Pixels</string>
            </property>
            <attribute name="buttonGroup">
             <string notr="true">bg_mask_group</string>
@@ -368,7 +368,7 @@ p, li { white-space: pre-wrap; }
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="bg_mask_group">
+  <buttongroup name="bg_vis_group">
    <property name="exclusive">
     <bool>false</bool>
    </property>
@@ -378,7 +378,7 @@ p, li { white-space: pre-wrap; }
     <bool>false</bool>
    </property>
   </buttongroup>
-  <buttongroup name="bg_vis_group">
+  <buttongroup name="bg_mask_group">
    <property name="exclusive">
     <bool>false</bool>
    </property>
